更改复制所用的js库

--- a/index.html
+++ b/index.html
@@ -79,12 +79,6 @@
         windowHalfY = window.innerHeight / 2;
         init(),
         animate();</script>
-      <script>(function() {
-          var bp = document.createElement('script');
-          bp.src = '//push.zhanzhang.baidu.com/push.js';
-          var s = document.getElementsByTagName("script")[0];
-          s.parentNode.insertBefore(bp, s);
-        })();</script>
       <style>input[type=text]{border-color:#bbb;height:38px;font-size:14px;border-radius:2px;outline:0;border:#ccc 1px solid;padding:0 10px;-webkit-transition:box-shadow .5s;margin-bottom:15px}input[type=text]:hover,input[type=text]:focus,input[type=password]:hover,input[type=password]:focus{border:1px solid #56b4ef;box-shadow:inset 0 1px 3px rgba(0,0,0,.05),0 0 8px rgba(82,168,236,.6);-webkit-transition:box-shadow .5s}input::-webkit-input-placeholder{color:#999;-webkit-transition:color .5s}input:focus::-webkit-input-placeholder,input:hover::-webkit-input-placeholder{color:#c2c2c2;-webkit-transition:color .5s}//输入框</style>
       <style>body{font:20px "微软雅黑",Verdana,Arial,Geneva,sans-serif;color:#404040}</style>
       <style type="text/css">.button{display:block;font-size:20px;text-decoration:none!important;font-family:Helvetica,Arial,sans serif;padding:8px 12px;border-radius:3px;-moz-border-radius:3px;box-shadow:inset 0 0 2px #fff;-o-box-shadow:inset 0 0 2px #fff;-webkit-box-shadow:inset 0 0 2px #fff;-moz-box-shadow:inset 0 0 2px #fff}.button:active{box-shadow:inset 0 0 3px #999;-o-box-shadow:inset 0 0 3px #999;-webkit-box-shadow:inset 0 0 3px #999;-moz-box-shadow:inset 0 0 3px #999}.grey{color:#FFF;border:1px solid #d0d0d0;background-image:-moz-linear-gradient(#ededed,#e1e1e1);background-image:-webkit-gradient(linear,0 0,0 100%,from(#e1e1e1),to(#ededed));background-image:-webkit-linear-gradient(rgba(237,237,237,0),rgba(225,225,225,0));background-image:-o-linear-gradient(#ededed,#e1e1e1);text-shadow:1px 1px 1px #566746;background-color:rgba(225,225,225,0)}.grey:hover{border:1px solid #1AE49D;border-right-color:#1ae49d;border-right-style:solid;border-right-width:1px;border-bottom-color:#1ae49d;border-bottom-style:solid;border-bottom-width:1px;border-left-color:#1ae49d;border-left-style:solid;border-left-width:1px;background-image:-moz-linear-gradient(#e1e1e1,#ededed);background-image:-webkit-gradient(linear,0 0,0 100%,from(#ededed),to(#e1e1e1));background-image:-webkit-linear-gradient(#4AB38A,#4AB38A);background-image:-o-linear-gradient(#e1e1e1,#ededed);background-color:#ededed}.grey:active{border:1px solid #666}.left{border-top-right-radius:0;-moz-border-top-right-radius:0;border-bottom-right-radius:0;-moz-border-bottom-right-radius:0;border-right:0}.left:hover{border-right:0}.middle{border-radius:0;-moz-radius:0;border-right:0}.middle:hover{border-right:0}.right{border-top-left-radius:0;-moz-border-top-left-radius:0;border-bottom-left-radius:0;-moz-border-bottom-left-radius:0}.large{padding:14px 28px}</style>
@@ -107,7 +101,7 @@
                   <p>
                     <input type="text" name="content" placeholder="输入网址~" value="" size="82">
                     <input type="submit" class="button grey large" value="biu~"></p>
-                  <p>非http开头网址将自动添加"http://"地址头</p>
+                  <p>链接太短了？来这里把它变长吧~</p>
                   <p align="right">by
                     <a href="http://www.chenxublog.com/" target="_blank">晨旭</a></p>
                 </form>
@@ -225,6 +219,8 @@
         <br>
         <br>
         <br>
+        <div id="disqus_thread"></div>
+        <script>var disqus_config = function () {this.page.url = "http://biubiubiubiubiubiubiubiubiubiubiubiubiubiubiubiubiubiubiubiubiu.com/";this.page.identifier = "长链接生成器";};(function() {var d = document, s = d.createElement('script');s.src = 'https://chang-lian-jie-sheng-cheng-qi.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       </tr>
     </body>
 
