--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html>
 
     <head>
-      <title>长链接生成器v2.2</title>
+      <title>长链接生成器v2.3</title>
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <meta name="description" content="长链接生成器">
       <meta name="keywords" content="长链接生成器">
@@ -95,9 +95,8 @@
             <tr>
               <td>
                 <form action="str.php" method="post">
-                  <p align="right">中文 |
-                    <a href="en/">English</a></p>
-                  <p align="center">长链接生成器v2.2</p>
+                  <p align="right">中文 | <a onclick="alert('comming soon');">English</a></p>
+                  <p align="center">长链接生成器v2.3</p>
                   <p>
                     <input type="text" name="content" placeholder="输入网址~" value="" size="82">
                     <input type="submit" class="button grey large" value="biu~"></p>
